# tokenizers

bindings/python/src/: tokenizer.rs
tokenizers/: Cargo.toml
tokenizers/examples/: serialization.rs
tokenizers/src/decoders/: bpe.rs  ctc.rs  mod.rs  sequence.rs  wordpiece.rs
tokenizers/src/models/: mod.rs
tokenizers/src/models/bpe/: model.rs  serialization.rs  trainer.rs  word.rs
tokenizers/src/models/unigram/: lattice.rs  model.rs  serialization.rs  trainer.rs
tokenizers/src/models/wordlevel/: mod.rs  serialization.rs  trainer.rs
tokenizers/src/models/wordpiece/: mod.rs  serialization.rs  trainer.rs
tokenizers/src/normalizers/: bert.rs  mod.rs  replace.rs  strip.rs  utils.rs
tokenizers/src/pre_tokenizers/: bert.rs  byte_level.rs  delimiter.rs  digits.rs  metaspace.rs  mod.rs  punctuation.rs  sequence.rs  split.rs
tokenizers/src/processors/: bert.rs  mod.rs  roberta.rs  sequence.rs  template.rs
tokenizers/src/tokenizer/: added_vocabulary.rs  encoding.rs  mod.rs  normalizer.rs  serialization.rs
tokenizers/src/utils/: mod.rs  padding.rs  progress.rs  truncation.rs
tokenizers/tests/: documentation.rs  serialization.rs  training.rs
