[package]
authors = ["Anthony MOI <m.anthony.moi@gmail.com>", "Nicolas Patry <patry.nicolas@protonmail.com>"]
edition = "2018"
name = "tokenizers"
version = "0.13.2"
homepage = "https://github.com/huggingface/tokenizers"
repository = "https://github.com/huggingface/tokenizers"
documentation = "https://docs.rs/tokenizers/"
license = "Apache-2.0"
keywords = ["tokenizer", "NLP", "huggingface", "BPE", "WordPiece"]
readme = "./README.md"
description = """
Provides an implementation of today's most used tokenizers,
with a focus on performances and versatility.
"""
exclude = [ "rust-toolchain", "target/*", "Cargo.lock", "benches/*.txt", "benches/*.json", "data/*" ]
resolver = "2"

[lib]
name = "tokenizers"
path = "src/lib.rs"
bench = false

[[bin]]
name = "cli"
path = "src/cli.rs"
bench = false
required-features = ["cli"]

[[bench]]
name = "bpe_benchmark"
harness = false

[[bench]]
name = "bert_benchmark"
harness = false

[[bench]]
name = "layout_benchmark"
harness = false

[dependencies]
lazy_static = "1.4"
rand = { version = "0.8", default-features = false, features = [ "alloc", "getrandom" ] }
onig = { version = "6.4", default-features = false, optional = true }
regex = "1.7"
regex-syntax = "0.6"
rayon = "1.7"
rayon-cond = "0.2"
serde = { version = "1.0", default-features = false, features = [ "alloc", "derive", "std" ] }
serde_json = "1.0"
clap = { version = "4.1", features=["derive"], optional = true }
unicode-normalization = { git="https://github.com/Systemcluster/unicode-normalization" }
unicode-properties = { git="https://github.com/unicode-rs/unicode-properties", default-features = false, features = ["general-category"] }
unicode-segmentation = "1.10"
indicatif = {version = "0.17", optional = true}
itertools = "0.10"
log = "0.4"
derive_builder = "0.12"
spm_precompiled = "0.1"
dirs = { version = "4.0", optional = true }
reqwest = { version = "0.11", optional = true }
cached-path = { version = "0.6", optional = true }
aho-corasick = "0.7"
paste = "1.0.12"
macro_rules_attribute = "0.1.3"
thiserror = "1.0.39"
fancy-regex = { version = "0.11", optional = true, default-features = false, features = ["unicode"] }
getrandom = { version = "0.2.8" }
esaxx-rs = { version = "0.1", default-features = false, features=[]}

[patch.crates-io]
unicode-normalization = { git="https://github.com/Systemcluster/unicode-normalization" }

[features]
default = ["progressbar", "http", "cli", "onig", "esaxx_fast", "random", "serialize"]
esaxx_fast = ["esaxx-rs/cpp"]
progressbar = ["indicatif"]
http = ["reqwest", "cached-path", "dirs"]
cli = ["clap"]
unstable_wasm = ["fancy-regex", "getrandom/js"]
random = ["rand/std", "rand/std_rng"]
unstable_wasi = ["fancy-regex"]
serialize = []

[dev-dependencies]
criterion = { version = "0.4", default-features = false, features = [ "plotters" ] }
assert_approx_eq = "1.1"
